@@ -170,8 +170,10 @@ public class MixedConfigTest {
         Assert.assertEquals(ports.size(), 1);
         Assert.assertEquals(ports.get(0), "9090/tcp");
         // Validate ballerina.conf in run command
-        Assert.assertEquals(getEntryPoint(DOCKER_IMAGE).toString(), "[java, -XX:+ExitOnOutOfMemoryError, " +
-                "-Xdiag, -cp, anjana-mix_configs-0.1.0.jar:jars/*, anjana.mix_configs.0.$_init]");
+        Assert.assertEquals(getEntryPoint(DOCKER_IMAGE).toString(), "[java, "
+                + "--sun-misc-unsafe-memory-access=allow, --enable-native-access=ALL-UNNAMED, "
+                + "-XX:+ExitOnOutOfMemoryError, -Xdiag, -cp, "
+                + "anjana-mix_configs-0.1.0.jar:jars/*, anjana.mix_configs.0.$_init]");
     }
 
     @AfterClass
